changge img srcset to picture and fix z-index bug in header

--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -6,6 +6,10 @@ header {
   padding: 2rem;
   min-height: 33.75rem;
 
+  @media (max-width: 480px) {
+    min-height: 100vh;
+  }
+
   @include breakpoint-up("medium") {
     background-image: url(../images/desktop/image-header.jpg);
     background-size: contain;
@@ -77,6 +81,7 @@ header {
 
 .mobile_menu {
   // display: none;
+  z-index: 2;
   visibility: hidden;
   opacity: 0;
   position: absolute;
@@ -124,7 +129,7 @@ header {
     content: "";
     position: absolute;
     right: 0;
-    top: -25px;
+    top: -24px;
     width: 25px;
     height: 25px;
     background-image: linear-gradient(
