--- a/css/style.css
+++ b/css/style.css
@@ -48,6 +48,13 @@ ul {
   margin: 0 auto;
 }
 
+picture img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
 header {
   background-color: #3dbeff;
   background-image: url(../images/mobile/image-header.jpg);
@@ -55,6 +62,11 @@ header {
   background-size: cover;
   padding: 2rem;
   min-height: 33.75rem;
+}
+@media (max-width: 480px) {
+  header {
+    min-height: 100vh;
+  }
 }
 @media (min-width: 40em) {
   header {
@@ -143,6 +155,7 @@ header .down_arrow {
 }
 
 .mobile_menu {
+  z-index: 2;
   visibility: hidden;
   opacity: 0;
   position: absolute;
@@ -187,7 +200,7 @@ header .down_arrow {
   content: "";
   position: absolute;
   right: 0;
-  top: -25px;
+  top: -24px;
   width: 25px;
   height: 25px;
   background-image: linear-gradient(to bottom right, transparent 50%, #fff 50%);
@@ -359,26 +372,17 @@ header .down_arrow {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  height: 100vw;
-}
-@media (min-width: 40em) {
-  .gallery {
-    height: auto;
-  }
 }
 .gallery__image {
   flex: 1 0 auto;
   width: 50%;
-  height: 50%;
-  -o-object-fit: cover;
-     object-fit: cover;
+  aspect-ratio: 1;
+  line-height: 0;
 }
 @media (min-width: 40em) {
   .gallery__image {
-    flex: 1 0 auto;
-    width: 25%;
-    -o-object-position: center right;
-       object-position: center right;
+    flex: 1 0 0;
+    aspect-ratio: 0.8;
   }
 }
 
